--- a/index.html
+++ b/index.html
@@ -4,6 +4,45 @@
 	   <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <!-- Banner -->
+      <div id="broadway">
+        <h1>Broadway Design</h1>
+          <p><a href="#home">Home</a></p>
+          <p><a href="#about">About</a></p>
+          <p><a href="#work">Work</a></p>
+          <p><a href="#team">Team</a></p>
+          <p><a href="#contact">Contact</a></p>
+      </div>
+    <!-- About -->
+      <h2 id="about">Our Process</h2>
+          <p><img src="./resources/images/identify.svg" alt="Identify"/></p>
+          <h3>Identify</h3>
+          <p>We focus on the most important details.</p>
 
+          <p><img src="./resources/images/understand.svg" alt="Understand"/></p>
+          <h3>Understand</h3>
+          <p>We study our projects inside and out.</p>
+
+          <p><img src="./resources/images/execute.svg" alt="Execute"/></p>
+          <h3>Execute</h3>
+          <p>We put everything we have into our work.</p>
+
+    <!-- More Info -->
+      <div id="newyork">
+        <h3>Designed in New York</h3>
+      </div>
+      <h3 id="work">Portfolio</h3>
+          <p>Coming Soon</p>
+      <h3 id="team">Team</h3>
+          <p>We're Hiring!</p>
+      <h3 id="contact">Contact</h3>
+          <p>Phone: (555)-555-5555</p>
+          <p>E-mail: test@example.com</p>
+          <p>Twitter: @test</p>
+
+    <!-- Footer -->
+      <div id="footer">
+        <p>&copy; Broadway 2016 <a href="#home">Home </a><a href="#about">About </a><a href="#work">Work </a><a href="#team">Team </a><a href="#contact">Contact </a></p>
+      </div>
   </body>
 </html>
